sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:18: error: not found: value value
setValeur(j,value);	
            ^